<resources>
    <string name="app_name">Ofertea</string>
    <string name="navigation_drawer_open">abrir barra de navegación</string>
    <string name="navigation_drawer_close">cerrar barra de navegación</string>
    <string name="nav_header_title">Ofertea</string>
    <string name="nav_header_desc">Barra de navegación</string>
    <string name="action_settings">preferencias</string>
    <string name="item0">cerrar sesión</string>
    <string name="item1">catálogo</string>
    <string name="item2">gallery</string>
    <string name="item3">carro compra</string>
    <string name="item4">perfil</string>
    <string name="item5">preferencias</string>
    <string name="item6">mapa</string>
    <string name="item7">galeria</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña </string>
    <string name="action_sign_in">Entrar o registrarse</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">e-mail no válido</string>
    <string name="error_invalid_password">contraseña demasiado corta (8 caracteres)</string>

    <string name="error_field_required">se requiere este campo</string>
    <string name="permission_rationale">se requieren permisos de contacto para autocompletar e-mail</string>
    <string name="bienvenida">para comenzar despliega el catálogo y encuentra las mejores ofertas, pincha en cada icono para recibir más información.</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="bienvenida_title">Bienvenido a Ofertea!</string>
    <string name="funcionalidaes">Estas son nuestras funcionalidades, explora la App!</string>
    <string name="prefs_title">Preferencias App</string>
    <string name="pref1">Estilo personalizado</string>
    <string name="pref2">Inglés</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="aceptar_settings">Aceptar</string>
    <string name="terns">Aceptas los terminos de uso (foolink) ?</string>
    <string name="accept">aceptar</string>
    <string name="cancel">rechazar</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Notification String -->
    <string name="reject_text">only avaliable for registered users</string>
    <string name="reject_subtext">go to login / register section on menu</string>
    <string name="reject_title">Rejected</string>
    <string name="done_subtext">we ll take care about it for future search</string>
    <string name="done_text">You added an article to favourites.</string>
    <string name="done_title">Done</string>
    <string name="warn_subtext">we could not notify your favourite products</string>
    <string name="warn_text">You have desactivated Ofertea in Background.</string>
    <string name="default_notification_channel_id"> defaultFCM </string>
    <string name="warn_title">Warn</string>

    <!-- error String -->
    <string name="error_incorrect_password">wrong password was set</string>
    <string name="error_inexistent_user">this user doesnt exist</string>
    <string name="error_bad_login_register">something went wrong in login/register try again</string>
    <string name="error_incorrect_call">wrong https call</string>
    <string name="error_server_error">sorry our server is out</string>
    <string name="success">added favourite</string>
    <string name="successUpload">your photo was added to our server</string>

    <!-- use terns-->
    <string name="ternsTit">Terms of use</string>
    <string name="ternsDesc">Accept App terms(foolink)?</string>
    <string name="yes">Accept</string>
    <string name="no">Decline</string>
    <string name="neutral">who am i?</string>

    <!-- explain login / register-->
    <string name="lTit">Login / Register</string>
    <string name="lMess">This function manages the login or register on the app, only registered users ll get notified of favourite products</string>

    <!-- explain photo-->
    <string name="pTit">Upload photo</string>
    <string name="pMess">This function enters into gallery where you can share your experience</string>

    <!-- explain favourite-->
    <string name="cTit">Favourite</string>
    <string name="cMess">This function favourites an offer</string>

    <!-- explain products-->
    <string name="prTit">Products</string>
    <string name="prMess">This function shows all avaliable offers in the App</string>

    <!-- explain preferences-->
    <string name="prefTit">Preferences</string>
    <string name="prefMess">This function allows the App configuration</string>

    <!-- wellcome-->
    <string name="wellcome">Welcome</string>

    <string name="google_maps_key">AIzaSyAiO8J2kSFI2p5wQH1f2y2xlVdCmPs1bn8</string>
    <string name="appwidget_text">Favourites counter</string>
    <string name="add_widget">Add widget</string>

    <!-- gallery activity-->
    <string name="but">añadir foto</string>
    <string name="mes">Fotos albergadas en servidor</string>

</resources>
