<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/salir"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/item0" />
        <item
            android:id="@+id/catalogo"
            android:icon="@drawable/ic_attach_money_black"
            android:title="@string/item1" />
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/ic_info_black"
            android:title="@string/item2" />
        <item
            android:id="@+id/carrito"
            android:icon="@drawable/ic_add_shopping_cart_black"
            android:title="@string/item3" />
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/ic_assignment_ind_black"
            android:title="@string/item4" />
        <item
            android:id="@+id/preferencias"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/item5" />
    </group>

</menu>
